objects/ssot__FundingAwardDisbursement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisbursementDateTime__c</fullName>
        <label>Disbursement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DisbursementName__c</fullName>
        <label>Disbursement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAwardId__c</fullName>
        <label>Funding Award</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Funding Disbursement Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodType__c</fullName>
        <label>Payment Method Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledDateTime__c</fullName>
        <label>Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670500190_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAwardDisbursement_FundingAwar_rel</label>
        <referenceTo>ssot__FundingAward__dlm</referenceTo>
        <relationshipLabel>FundingAwardDisbursement_FundingAwar_rel</relationshipLabel>
        <relationshipName>rel_1716670500190_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>